--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 	<iframe class="chat" src="https://www.youtube.com/live_chat?v=78ZthTGcdPw&embed_domain=joogps.github.io"></iframe>
 
 	<div class="song">
-		<input class="input" placeholder="Playlist link goes here"></input>
-		<iframe class="playback" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+		<input class="input" placeholder="Playlist or video link goes here"></input>
+		<iframe class="playback" src="https://www.youtube.com/embed/M5d7vygUPoQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
 	</div>
 </body>
 
