--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 	</style>
 </head>
 <body>
-	<iframe class="video" src="https://www.youtube.com/embed/78ZthTGcdPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+	<iframe class="video" src="https://www.youtube.com/embed/78ZthTGcdPw?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
 	<iframe class="chat" src="https://www.youtube.com/live_chat?v=78ZthTGcdPw&embed_domain=joogps.github.io"></iframe>
 
 	<div class="song">
-		<input class="input" placeholder="Playlist or video link goes here"></input>
-		<iframe class="playback" src="https://www.youtube.com/embed/M5d7vygUPoQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+		<input class="input" placeholder="Playlist or video URL goes here"></input>
+		<iframe class="playback" src="https://www.youtube.com/embed/M5d7vygUPoQ?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
 	</div>
 </body>
 
@@ -63,13 +63,13 @@
 		let playback = document.getElementsByClassName("playback")[0];
 		if (e.keyCode == 13) {
 			if(youtube_video(url) && youtube_playlist(url)) {
-				playback.src = "https://www.youtube.com/embed?v="+youtube_video(url)+"&list="+youtube_playlist(url);
+				playback.src = "https://www.youtube.com/embed?v="+youtube_video(url)+"&list="+youtube_playlist(url)+"?autoplay=1";
 			}
 			else if(youtube_video(url)) {
-				playback.src = "https://www.youtube.com/embed/"+youtube_video(url);
+				playback.src = "https://www.youtube.com/embed/"+youtube_video(url)+"?autoplay=1";
 			}
 			else if(youtube_playlist(url)) {
-				playback.src = "https://www.youtube.com/embed?list="+youtube_playlist(url);
+				playback.src = "https://www.youtube.com/embed?list="+youtube_playlist(url)+"?autoplay=1";
 			}
 		}
 	}
