--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		.chat {
 			position: absolute;
-			top: 0;
+			top: 1px;
 			left: calc(50% + 1px);
 			width: calc(50% - 1px);
 			height: 99%;
