--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Counting to Pi</title>
+	<title>Approximating Pi - Livestream</title>
   	<link rel="icon" type="image/png" href="favicon.png">
 
 	<style>
 		body {
 			margin: 0;
+			background: lightgrey;
 		}
 
 		.video {
