--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 		.video {
 			position: absolute;
 			top: 0;
-			width: calc(50% - 1px);
-			height: calc(50% - 1px);
+			width: calc(50% - 2px);
+			height: calc(50% - 2px);
 		}
 
 		.chat {
 			position: absolute;
 			top: 1px;
-			left: calc(50% + 1px);
-			width: calc(50% - 1px);
+			left: calc(50% + 2px);
+			width: calc(50% - 2px);
 			height: 99%;
 		}
 
 		.song {
 			position: absolute;
-			top: calc(50% + 1px);
-			width: calc(50% - 1px);
-			height: calc(48% - 1px);
+			top: calc(50% + 2px);
+			width: calc(50% - 2px);
+			height: calc(48% - 2px);
 		}
 
 		.input {
@@ -38,7 +38,11 @@
 
 			padding-left: 10px;
 
-			border: grey solid 1px
+			border: grey solid 1px;
+		}
+
+		.input:focus {
+			outline: black solid 1px;
 		}
 
 		.playback {
