--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<link href="stylesheet.css" rel="stylesheet" type="text/css">
-	<script src="script.js" type="text/javascript"></script>
+	<script src="parseurl.js" type="text/javascript"></script>
 </head>
 <body>
 	<table>
