--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<tr>
 			<td>
 				<input class="input" placeholder="Playlist or video URL goes here"></input>
-				<iframe class="song" src="https://www.youtube.com/embed/M5d7vygUPoQ?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+				<iframe class="song" src="https://www.youtube.com/embed/M5d7vygUPoQ?" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
 			</td>
 		</tr>
 	</table>
