--- a/index.html
+++ b/index.html
@@ -1,45 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Approximating Pi - Livestream</title>
+	<title>Youtube Custom Player</title>
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<link href="stylesheet.css" rel="stylesheet" type="text/css">
-	<script src="parseurl.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+	<script src="script.js" type="text/javascript"></script>
 </head>
 <body>
 	<table>
-		<tr>
-			<td>
-				<iframe class="video" src="https://www.youtube.com/embed/PIeKyP97EUc?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe> 
-			</td>
-			<td rowspan="2">
-				<iframe class="chat" src="https://www.youtube.com/live_chat?v=PIeKyP97EUc&embed_domain=joogps.github.io"></iframe>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<input class="input" placeholder="Playlist or video URL goes here"></input>
-				<iframe class="song" src="https://www.youtube.com/embed/M5d7vygUPoQ?" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+		<tr id="first-row">
+			<td class="frame" id="first-frame">
+				<div class="controller" id="first-controller">
+					<input class="url" placeholder="Video URL goes here"></input>
+					<div id="edit">
+						<button id="remove">-</button>
+						<button id="add">+</button>
+					</div>
+				</div class="no-playback"></div>
 			</td>
 		</tr>
 	</table>
-	<script>
-		document.getElementsByClassName("input")[0].addEventListener("keyup", function(e) {
-			let url = this.value;
-			if (e.keyCode == 13 && url.length >= 7) {
-				let song = document.getElementsByClassName("song")[0];
-				if(youtube_video(url) && youtube_playlist(url)) {
-					song.src = "https://www.youtube.com/embed?v="+youtube_video(url)+"&list="+youtube_playlist(url);
-				}
-				else if(youtube_video(url)) {
-					song.src = "https://www.youtube.com/embed/"+youtube_video(url);
-				}
-				else if(youtube_playlist(url)) {
-					song.src = "https://www.youtube.com/embed?list="+youtube_playlist(url);
-				}
-			}
-		});
-	</script>
 </body>
 </html>
