--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Youtube Custom Player</title>
+	<title>Custom YouTube Player</title>
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<link href="stylesheet.css" rel="stylesheet" type="text/css">
