Remove button is now working

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 <body>
 	<table>
-		<tr id="first-row">
-			<td class="frame" id="first-frame">
-				<div class="controller" id="first-controller">
+		<tr>
+			<td class="frame">
+				<div class="controller can-edit">
 					<input class="url" placeholder="Video URL goes here"></input>
-					<div id="edit">
-						<button id="remove">-</button>
-						<button id="add">+</button>
+					<div class="edit">
+						<button class="remove">-</button>
+						<button class="add">+</button>
 					</div>
-				</div class="no-playback"></div>
+				</div>
+				<div class="no-playback"><span>The YouTube player will appear here after the URL is inserted</span><div>
 			</td>
 		</tr>
 	</table>
