Improving the user experience

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		<tr>
 			<td class="frame">
 				<div class="controller can-edit">
-					<input class="url" placeholder="Video URL goes here"></input>
+					<input class="url" placeholder="URL goes here"></input>
 					<div class="edit">
 						<button class="remove">-</button>
 						<button class="add">+</button>
 					</div>
 				</div>
-				<div class="no-playback"><span>The YouTube player will appear here after the URL is inserted</span><div>
+				<div class="no-playback"><img src="yt_icon.png" alt="YouTube icon"></img><div>
 			</td>
 		</tr>
 	</table>
